<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/lib_back">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"/>

    <Button
        android:id="@+id/add_book_button"
        android:layout_width="217dp"
        android:layout_height="80dp"
        android:text="@string/add_book"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/start_text"
        app:layout_constraintStart_toStartOf="@id/start_text"
        app:layout_constraintEnd_toEndOf="@id/start_text"/>

    <Button
        android:id="@+id/search_book_button"
        android:layout_width="217dp"
        android:layout_height="80dp"
        android:text="@string/search_book"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/add_book_button"
        app:layout_constraintStart_toStartOf="@id/add_book_button"
        app:layout_constraintEnd_toEndOf="@id/add_book_button"/>



    <Button
        android:id="@+id/view_library"
        android:layout_width="217dp"
        android:layout_height="80dp"
        android:text="@string/view_library"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/search_book_button"
        app:layout_constraintStart_toStartOf="@id/search_book_button"
        app:layout_constraintEnd_toEndOf="@id/search_book_button" />

    <Button
        android:id="@+id/filter_books"
        android:layout_width="217dp"
        android:layout_height="80dp"
        android:text="@string/filter_books"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view_library"
        app:layout_constraintStart_toStartOf="@id/view_library"
        app:layout_constraintEnd_toEndOf="@id/view_library" />


</androidx.constraintlayout.widget.ConstraintLayout>