<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/blue_cover">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/issue_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/issue_intro"
            android:padding="40dp"
            android:textSize="40dp"
            android:textColor="@color/white"
            />

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issue_intro"
            android:id="@+id/name_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id_enter"
            android:textColor="@color/white"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/book_name_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label_text"
            android:padding="10dp"
            />


        <TextView
            android:id="@+id/student_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/student_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_name_input"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/student_label_text"
            app:layout_constraintTop_toBottomOf="@+id/student_label_text"
            app:layout_constraintEnd_toEndOf="@+id/student_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/student_label"
            android:id="@+id/rollno_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rollno"
            android:textColor="@color/white"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rollno_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/rollno_label_text"
            app:layout_constraintTop_toBottomOf="@+id/rollno_label_text"
            app:layout_constraintEnd_toEndOf="@+id/rollno_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rollno_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rollno" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/issue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_item"
            app:layout_constraintTop_toBottomOf="@+id/rollno_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@+id/issue_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>