<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_cover">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/add_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/add_intro"
            android:padding="40dp"
            android:textSize="40dp"
            android:textColor="@color/white"
            />

        <TextView
                app:layout_constraintLeft_toLeftOf="@id/add_intro"
                app:layout_constraintTop_toBottomOf="@id/add_intro"
                android:id="@+id/name_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_name"
                android:textColor="@color/white"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/name_label_text"
            app:layout_constraintTop_toBottomOf="@+id/name_label_text"
            app:layout_constraintEnd_toEndOf="@+id/name_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/author_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/author_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/author_label_text"
            app:layout_constraintTop_toBottomOf="@+id/author_label_text"
            app:layout_constraintEnd_toEndOf="@+id/author_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author_label"
            android:id="@+id/genre_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genre_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/genre_label_text"
            app:layout_constraintTop_toBottomOf="@+id/genre_label_text"
            app:layout_constraintEnd_toEndOf="@+id/genre_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genre_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_label"
            android:id="@+id/publisher_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publisher"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publisher_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/publisher_label_text"
            app:layout_constraintTop_toBottomOf="@+id/publisher_label_text"
            app:layout_constraintEnd_toEndOf="@+id/publisher_label_text"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publisher_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publisher" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            app:layout_constraintTop_toBottomOf="@+id/publisher_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@+id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>